--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <section class="hero">
     <div class="hero-overlay">
       <div class="hero-content">
-        <img src="assets/logo.svg" alt="ULVKLOU Logo" class="logo" />
+        <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo" />
         <h1>Lead with Strategy. Win with Precision.</h1>
         <p>Transform disruption into momentum with tailored, high-impact advisory for modern leaders.</p>
         <a href="#contact" class="cta-btn">Let’s Talk</a>
