--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 <body>
   <section class="hero">
     <div class="hero-overlay">
-      <div class="hero-content">
+
+      <!-- Top-left logo -->
+      <div class="hero-logo">
         <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo" />
+      </div>
+
+      <!-- Bottom-left text and CTA -->
+      <div class="hero-text">
         <h1>Lead with Strategy. Win with Precision.</h1>
         <p>Transform disruption into momentum with tailored, high-impact advisory for modern leaders.</p>
         <a href="#contact" class="cta-btn">Let’s Talk</a>
       </div>
+
     </div>
   </section>
 </body>
