--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
       <!-- Bottom-left text and CTA -->
       <div class="hero-text">
         <h1>Lead with Strategy. Win with Precision.</h1>
-        <p>Transform disruption into momentum with tailored,<br>
-        high-impact advisory for modern leaders.
-        </p>
+        <p>Transform disruption into momentum with tailored,<br>high-impact advisory for modern leaders.</p>
         <a href="#contact" class="cta-btn">Let’s Talk</a>
       </div>
 
