--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <a href="#contact" class="cta-btn">Let’s Talk</a>
       </div>
 
+      <img src="assets/fox.png" alt="Fox Icon" class="fox" />
+
+
     </div>
   </section>
 </body>
