--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <p>Transform disruption into momentum with tailored,<br>high-impact advisory for modern leaders.</p>
         <a href="#contact" class="cta-btn">Let’s Talk</a>
       </div>
+      
+      <img src="assets/moon.png" alt="Moon" class="moon" />
 
       <img src="assets/fox.png" alt="Fox Icon" class="fox" />
 
