--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <section class="about">
   <div class="about-container">
-    <h2>About Us</h2>
+    <h2>ABOUT US</h2>
     <p>
       In a world defined by constant disruption, businesses must evolve fast—or risk falling behind.
       The pressure is on to be more agile, efficient, sustainable, and deeply connected to both people and purpose.
