--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       At ULVKLOU, we turn disruption into direction, ideas into action, and complexity into momentum.
     </p>
     <p class="about-highlight">
-      <b></b>We don’t just help clients adapt to the future—we help them lead it.</b>
+      <b>We don’t just help clients adapt to the future—we help them lead it.</b>
     </p>
   </div>
 </section>
