--- a/index.html
+++ b/index.html
@@ -53,5 +53,34 @@
   </div>
 </section>
 
+  <section class="focus-area">
+  <div class="focus-container">
+    <h2>OUR FOCUS AREA</h2>
+    <div class="focus-grid">
+      <div class="focus-item">
+        <img src="assets/technology.png" alt="Technology Icon">
+        <p>Technology &<br>Architecture Strategy</p>
+      </div>
+      <div class="focus-item">
+        <img src="assets/engineering.png" alt="Engineering Icon">
+        <p>Engineering<br>Organization Design</p>
+      </div>
+      <div class="focus-item">
+        <img src="assets/product.png" alt="Product Icon">
+        <p>Product<br>Roadmapping</p>
+      </div>
+      <div class="focus-item">
+        <img src="assets/infrastructure.png" alt="Infrastructure Icon">
+        <p>Infrastructure &<br>Platform Modernization</p>
+      </div>
+      <div class="focus-item">
+        <img src="assets/advisory.png" alt="Advisory Icon">
+        <p>Technical Advisory<br>for Leadership</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 </body>
 </html>
