--- a/index.html
+++ b/index.html
@@ -81,6 +81,35 @@
   </div>
 </section>
 
+  <section class="approach">
+  <div class="approach-container">
+    <h2>Our Approach</h2>
+    <div class="approach-cards">
+      <div class="approach-card">
+        <div class="approach-number">1</div>
+        <h3>Hands-on and embedded</h3>
+        <p>We work closely with your team, taking responsibility for both planning and execution.</p>
+      </div>
+      <div class="approach-card">
+        <div class="approach-number">2</div>
+        <h3>Experienced leadership</h3>
+        <p>All work is delivered by senior professionals with deep backgrounds in engineering and product strategy.</p>
+      </div>
+      <div class="approach-card">
+        <div class="approach-number">3</div>
+        <h3>Long-term thinking</h3>
+        <p>We design systems, teams, and strategies that support sustained growth—not just immediate needs.</p>
+      </div>
+      <div class="approach-card">
+        <div class="approach-number">4</div>
+        <h3>Focused on outcomes</h3>
+        <p>We define success in business terms, not just technical metrics.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
 
 </body>
 </html>
