--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
   </div>
 </section>
 
+  <footer class="footer">
+  <div class="footer-content">
+    <h3>Contact Us</h3>
+    <p>contact@ulvklou.com</p>
+  </div>
+</footer>
+
+
 
 
 </body>
