--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         <a href="#contact" class="cta-btn">Let’s Talk</a>
       </div>
       
-      <img src="assets/moon.png" alt="Moon" class="moon" />
+      <div class="moon-wrapper">
+        <img src="assets/moon.png" alt="Moon" class="moon">
+      </div>
+
 
       <img src="assets/fox.png" alt="Fox Icon" class="fox" />
 
