--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
     <div class="hero-overlay">
 
       <!-- Top-left logo -->
-      <div class="hero-logo">
-        <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo" />
-      </div>
+    <header class="navbar">
+  <div class="navbar-container">
+    <div class="navbar-logo">
+      <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img">
+    </div>
+    <nav class="navbar-links">
+      <a href="#home" class="nav-link gold">HOME</a>
+      <a href="#contact" class="nav-link">CONTACT</a>
+    </nav>
+  </div>
+</header>
+
 
       <!-- Bottom-left text and CTA -->
       <div class="hero-text">
