--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
     <div class="hero-overlay">
 
       <!-- Top-left logo -->
-    <header class="navbar">
+<header class="navbar">
   <div class="navbar-container">
-    <div class="navbar-logo">
+    <a href="index.html" class="navbar-logo">
       <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img">
-    </div>
+    </a>
     <nav class="navbar-links">
-      <a href="#home" class="nav-link gold">HOME</a>
-      <a href="#contact" class="nav-link">CONTACT</a>
+      <a href="index.html" class="nav-link-gold">HOME</a>
+      <a href="contact.html" class="nav-link">CONTACT</a>
     </nav>
   </div>
 </header>
+
 
 
       <!-- Bottom-left text and CTA -->
