--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img">
     </a>
     <nav class="navbar-links">
-      <a href="index.html" class="nav-link-gold">HOME</a>
+      <a href="index.html" class="nav-link gold">HOME</a>
       <a href="contact.html" class="nav-link">CONTACT</a>
     </nav>
   </div>
