--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
       <a href="index.html" class="nav-link gold">HOME</a>
       <a href="contact.html" class="nav-link">CONTACT</a>
     </nav>
+
+    <!-- Hamburger icon for mobile -->
+    <div class="hamburger" id="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </div>
 </header>
+
 
 
     
@@ -128,6 +136,12 @@
     <p>contact@ulvklou.com</p>
   </div>
 </footer>
+
+  <!-- Mobile Menu Drawer -->
+<div class="mobile-menu" id="mobileMenu">
+  <a href="index.html">HOME</a>
+  <a href="contact.html">CONTACT</a>
+</div>
 
 
 
