--- a/index.html
+++ b/index.html
@@ -143,13 +143,23 @@
   <a href="contact.html">CONTACT</a>
 </div>
 
-  <script>
+<script>
   const hamburger = document.getElementById('hamburger');
   const mobileMenu = document.getElementById('mobileMenu');
+  const body = document.body;
 
   hamburger.addEventListener('click', () => {
-    const isOpen = mobileMenu.style.display === 'flex';
-    mobileMenu.style.display = isOpen ? 'none' : 'flex';
+    const isOpen = hamburger.classList.contains('open');
+
+    hamburger.classList.toggle('open');
+    mobileMenu.classList.toggle('open');
+
+    // Lock/unlock scroll
+    if (!isOpen) {
+      body.classList.add('no-scroll');
+    } else {
+      body.classList.remove('no-scroll');
+    }
   });
 </script>
 
