--- a/index.html
+++ b/index.html
@@ -146,22 +146,24 @@
 <script>
   const hamburger = document.getElementById('hamburger');
   const mobileMenu = document.getElementById('mobileMenu');
-  const body = document.body;
+  const menuOverlay = document.getElementById('menuOverlay');
 
   hamburger.addEventListener('click', () => {
     const isOpen = hamburger.classList.contains('open');
 
     hamburger.classList.toggle('open');
     mobileMenu.classList.toggle('open');
+    menuOverlay.classList.toggle('active');
+  });
 
-    // Lock/unlock scroll
-    if (!isOpen) {
-      body.classList.add('no-scroll');
-    } else {
-      body.classList.remove('no-scroll');
-    }
+  // Optional: Close menu when overlay is clicked
+  menuOverlay.addEventListener('click', () => {
+    hamburger.classList.remove('open');
+    mobileMenu.classList.remove('open');
+    menuOverlay.classList.remove('active');
   });
 </script>
+
 
 <div id="menuOverlay" class="menu-overlay"></div>
 
