--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
       padding: 1.5rem 3rem;
       position: relative;
       z-index: 10;
+      pointer-events: none;
     }
 
     .navbar-container {
@@ -26,6 +27,10 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+    }
+
+    .navbar-container > * {
+      pointer-events: auto;
     }
 
     .navbar-logo .logo-img {
@@ -52,6 +57,96 @@
 
     .nav-link.gold {
       color: #9E834C;
+    }
+
+    /* Hamburger icon styles */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      cursor: pointer;
+      z-index: 101;
+    }
+
+    .hamburger span {
+      width: 25px;
+      height: 2px;
+      background-color: #9E834C;
+      display: block;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    .hamburger.open span:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .hamburger.open span:nth-child(2) {
+      opacity: 0;
+    }
+
+    .hamburger.open span:nth-child(3) {
+      transform: rotate(-45deg) translate(6px, -6px);
+    }
+
+    .mobile-menu {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      top: 95px;
+      left: 0;
+      right: 0;
+      background-color: #9E834C;
+      padding: 2rem 2rem 0rem;
+      z-index: 500;
+      transform: translateY(-100%);
+      transition: transform 0.3s ease;
+      height: auto;
+      box-sizing: border-box;
+    }
+
+    .mobile-menu.open {
+      display: flex;
+      transform: translateY(0);
+    }
+
+    .mobile-menu a {
+      color: #000;
+      font-size: 16px;
+      font-weight: 600;
+      margin-bottom: 1.5rem;
+      text-decoration: none;
+      letter-spacing: 0.15em;
+      text-align: left;
+    }
+
+    .menu-overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0);
+      z-index: 400;
+    }
+
+    .menu-overlay.active {
+      display: block;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .navbar-links {
+        display: none;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+
+      .contact-wrapper {
+        flex-direction: column;
+      }
     }
 
     /* Contact Section */
@@ -124,12 +219,6 @@
     .contact-form button:hover {
       background-color: #b99e70;
     }
-
-    @media (max-width: 768px) {
-      .contact-wrapper {
-        flex-direction: column;
-      }
-    }
   </style>
 </head>
 <body>
@@ -144,8 +233,22 @@
         <a href="index.html" class="nav-link">HOME</a>
         <a href="contact.html" class="nav-link gold">CONTACT</a>
       </nav>
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </div>
   </header>
+
+  <!-- Mobile Menu -->
+  <div class="mobile-menu" id="mobileMenu">
+    <a href="index.html">HOME</a>
+    <a href="contact.html">CONTACT</a>
+  </div>
+
+  <!-- Overlay -->
+  <div class="menu-overlay" id="menuOverlay"></div>
 
   <!-- Contact Content -->
   <section class="contact-wrapper">
@@ -170,6 +273,27 @@
       </form>
     </div>
   </section>
+
+  <!-- Script -->
+  <script>
+    const hamburger = document.getElementById('hamburger');
+    const mobileMenu = document.getElementById('mobileMenu');
+    const menuOverlay = document.getElementById('menuOverlay');
+
+    hamburger.addEventListener('click', () => {
+      const isOpen = hamburger.classList.contains('open');
+
+      hamburger.classList.toggle('open');
+      mobileMenu.classList.toggle('open');
+      menuOverlay.classList.toggle('active');
+    });
+
+    menuOverlay.addEventListener('click', () => {
+      hamburger.classList.remove('open');
+      mobileMenu.classList.remove('open');
+      menuOverlay.classList.remove('active');
+    });
+  </script>
 
 </body>
 </html>
