--- a/contact.html
+++ b/contact.html
@@ -219,6 +219,28 @@
     .contact-form button:hover {
       background-color: #b99e70;
     }
+
+    @media (max-width: 768px) {
+  .navbar-links {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+  .contact-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contact-right {
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto;
+  }
+}
+
   </style>
 </head>
 <body>
