--- a/contact.html
+++ b/contact.html
@@ -147,6 +147,19 @@
       .contact-wrapper {
         flex-direction: column;
       }
+
+      .contact-wrapper {
+      flex-direction: column;
+      align-items: center; /* This centers both contact-left and contact-right */
+      text-align: center;  /* Optional: centers text inside */
+    }
+    
+    .contact-right,
+    .contact-left {
+      width: 100%;
+      max-width: 500px;
+    }
+
     }
 
     /* Contact Section */
