--- a/contact.html
+++ b/contact.html
@@ -150,10 +150,15 @@
         text-align: center;
       }
     
-      .contact-right,
-      .contact-left {
+      .contact-form {
         width: 100%;
-        max-width: 500px;
+        max-width: 100%;
+      }
+    
+      .contact-form input,
+      .contact-form textarea {
+        width: 100%;
+        box-sizing: border-box;
       }
     }
 
