--- a/contact.html
+++ b/contact.html
@@ -160,6 +160,14 @@
         width: 100%;
         box-sizing: border-box;
       }
+
+     .contact-form input,
+      .contact-form textarea {
+        width: 90vw;
+        max-width: 100%;
+        margin: 0 auto;
+      }
+
     }
 
 
