--- a/contact.html
+++ b/contact.html
@@ -255,8 +255,12 @@
   <header class="navbar">
     <div class="navbar-container">
       <div class="navbar-logo">
-        <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img">
+        <a href="index.html"> <!-- Adjust if needed -->
+          <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img">
+        </a>
       </div>
+    </div>
+
       <nav class="navbar-links">
         <a href="index.html" class="nav-link">HOME</a>
         <a href="contact.html" class="nav-link gold">CONTACT</a>
