--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,19 @@
       color: #d2b67b;
     }
 
-    .nav-link.gold {
-      color: #9E834C;
+      .nav-link.gold {
+        color: #9E834C;
+      }
+
+    /*nav bar link*/
+      .navbar-logo a {
+    display: inline-block;
+      }
+    
+    .logo-img {
+      display: block;
     }
+
 
     /* Hamburger icon styles */
     .hamburger {
@@ -245,7 +255,7 @@
       background-color: #b99e70;
     }
 
-
+    
 
   </style>
 </head>
