--- a/contact.html
+++ b/contact.html
@@ -255,11 +255,10 @@
 
   <!-- Navbar -->
   <header class="navbar">
-    <div class="navbar-container">
+  <div class="navbar-container">
       <div class="navbar-logo">
-        <a href="index.html"> <!-- Adjust if needed -->
-          <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img">
-        </a>
+        <a>index.hmtl
+        <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img"></a>
       </div>
     </div>
 
