--- a/contact.html
+++ b/contact.html
@@ -257,7 +257,7 @@
   <header class="navbar">
   <div class="navbar-container">
       <div class="navbar-logo">
-        <a>index.hmtl
+        <a href="index.hmtl">
         <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img"></a>
       </div>
     </div>
