--- a/contact.html
+++ b/contact.html
@@ -257,8 +257,7 @@
   <header class="navbar">
   <div class="navbar-container">
       <div class="navbar-logo">
-        <a href="index.html">
-        <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img"></a>
+        <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img">
       </div>
     </div>
 
