--- a/contact.html
+++ b/contact.html
@@ -255,11 +255,18 @@
 
   <!-- Navbar -->
   <header class="navbar">
-  <div class="navbar-container">
-      <div class="navbar-logo">
-        <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img">
+    <div class="navbar-container">
+      <div class="logo-and-toggle">
+        <a href="index.html" class="navbar-logo">
+          <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img" />
+        </a>
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </div>
-    </div>
+
 
       <nav class="navbar-links">
         <a href="index.html" class="nav-link">HOME</a>
