--- a/contact.html
+++ b/contact.html
@@ -55,11 +55,9 @@
       color: #d2b67b;
     }
 
-      .nav-link.gold {
-        color: #9E834C;
-      }
-
-
+    .nav-link.gold {
+      color: #9E834C;
+    }
 
     /* Hamburger icon styles */
     .hamburger {
@@ -247,7 +245,7 @@
       background-color: #b99e70;
     }
 
-    
+
 
   </style>
 </head>
@@ -256,12 +254,9 @@
   <!-- Navbar -->
   <header class="navbar">
     <div class="navbar-container">
-      <div class="logo-and-toggle">
-        <a href="index.html" class="navbar-logo">
-          <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img" />
-        </a>
-  
-
+      <div class="navbar-logo">
+        <img src="assets/logo.png" alt="ULVKLOU Logo" class="logo-img">
+      </div>
       <nav class="navbar-links">
         <a href="index.html" class="nav-link">HOME</a>
         <a href="contact.html" class="nav-link gold">CONTACT</a>
