--- a/contact.html
+++ b/contact.html
@@ -281,17 +281,17 @@
   <!-- Contact Content -->
   <section class="contact-wrapper">
     <div class="contact-left">
-      <h2>Let’s Build What’s Next.</h2>
+      <h2>Where Vision Meets Execution</h2>
       <p>
-        At ULVKLOU, we partner with visionary businesses to design and scale custom tech solutions—from infrastructure and product development to long-term advisory.
+      ULVKLOU partners with founders, leadership teams, and decision-makers to transform ambitious goals into structured, executable strategies.
       </p>
       <p>
-        Have an idea, a challenge, or a roadmap in mind? We’re ready to listen.
+        Submit your info and we’ll connect with you shortly.
       </p>
     </div>
 
     <div class="contact-right">
-      <h3>CONTACT US</h3>
+      <h3>GET IN TOUCH</h3>
       <form class="contact-form">
         <input type="text" placeholder="NAME" required>
         <input type="text" placeholder="COMPANY NAME">
